<resources>
    <string name="app_name">NC safe args 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="send_message">Send Message</string>
    <string name="fragment_c">Fragment C</string>
</resources>